--- a/FirstProject/Views/Home/Index.cshtml
+++ b/FirstProject/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
-﻿ <h1>Xosh Gelmisiz</h1>
+﻿﻿ <h1>Xosh Gelmisiz</h1>
 
-<a asp-action="index" asp-area="AdminPanel" asp-controller="Dashboard" >
-    <button type ="button" class="btn btn-danger"> AdminPanel</button>
+<a asp-action="index" asp-area="AdminPanel" asp-controller="Dashboard">
+    <button type="button" class="btn btn-danger"> AdminPanel</button>
 </a> 
