--- a/FirstProject/Areas/AdminPanel/Views/Register/register.cshtml
+++ b/FirstProject/Areas/AdminPanel/Views/Register/register.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/AdminPanel/Views/Shared/_Layout.cshtml";
 }
  
-@model AppUser
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -58,23 +58,25 @@
                                     <label class="col-form-label pt-0">Your Name</label>
                                     <div class="row g-2">
                                         <div class="col-6">
-                                            <input asp-for="UserName" class="form-control" type="text" required="" placeholder="First name">
+                                            <input name="username" class="form-control" type="text" required="" placeholder="First name">
                                         </div>
                                         <div class="col-6">
                                             <input class="form-control" type="text" required="" placeholder="Last name">
                                         </div>
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <label class="col-form-label">Email Address</label>
-                                    <input asp-for="Email" class="form-control"  type="email"  required="" placeholder="Test@gmail.com">
-                                </div>
+                                 
                                 <div class="form-group">
                                     <label class="col-form-label">Password</label>
                                     <div class="form-input position-relative">
-                                        <input asp-for="Password" class="form-control"   type="password" name="login[password]" required="" placeholder="*********">
+                                        <input name="password" class="form-control"   type="password"  required="" placeholder="*********">
                                         <div class="show-hide"><span class="show"></span></div>
                                     </div>
+                                </div>
+                                <div class="text-danger" asp-validation-summary="ModelOnly" >
+
+
+
                                 </div>
                                 <div class="form-group mb-0">
                                     <div class="checkbox p-0">
