--- a/FirstProject/Areas/AdminPanel/Views/Login/Login.cshtml
+++ b/FirstProject/Areas/AdminPanel/Views/Login/Login.cshtml
@@ -1,4 +1,11 @@
-﻿<!DOCTYPE html>
+﻿
+@{
+    ViewData["Title"] = "Login";
+}
+
+<h1>Login</h1>
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -42,20 +49,21 @@
                     <div>
                         <div><a class="logo" href="index.html"><img class="img-fluid for-dark" src="~/images/logo/logo.png" alt="looginpage"><img class="img-fluid for-light" src="~/images/logo/logo_dark.png" alt="looginpage"></a></div>
                         <div class="login-main">
-                            <form class="theme-form">
+                            <form method="post" class="theme-form">
                                 <h4>Sign in to account </h4>
                                 <p>Enter your email & password to login</p>
                                 <div class="form-group">
                                     <label class="col-form-label">Email Address</label>
-                                    <input class="form-control" type="email" required="" placeholder="Test@gmail.com">
+                                    <input name="username" class="form-control" type="text" required="" placeholder="Username">
                                 </div>
                                 <div class="form-group">
                                     <label class="col-form-label">Password </label>
                                     <div class="form-input position-relative">
-                                        <input class="form-control" type="password" name="login[password]" required="" placeholder="*********">
+                                        <input class="form-control" type="password" name="password" required="" placeholder="*********">
                                         <div class="show-hide"> <span class="show"></span></div>
                                     </div>
                                 </div>
+                                <div class="text-danger" asp-validation-summary="ModelOnly" > </div>
                                 <div class="form-group mb-0">
                                     <div class="checkbox p-0">
                                         <input id="checkbox1" type="checkbox">
