--- a/FirstProject/Areas/AdminPanel/Views/Register/register.cshtml
+++ b/FirstProject/Areas/AdminPanel/Views/Register/register.cshtml
@@ -14,41 +14,41 @@
     <meta name="description" content="Riho admin is super flexible, powerful, clean &amp; modern responsive bootstrap 5 admin template with unlimited possibilities.">
     <meta name="keywords" content="admin template, Riho admin template, dashboard template, flat admin template, responsive admin template, web app">
     <meta name="author" content="pixelstrap">
-    <link rel="icon" href="../assets/images/favicon.png" type="image/x-icon">
-    <link rel="shortcut icon" href="../assets/images/favicon.png" type="image/x-icon">
+    <link rel="icon" href="/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
     <title>Riho - Premium Admin Template</title>
     <!-- Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800&amp;display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../assets/css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="/css/font-awesome.css">
     <!-- ico-font-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/icofont.css">
+    <link rel="stylesheet" type="text/css" href="/css/vendors/icofont.css">
     <!-- Themify icon-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/themify.css">
+    <link rel="stylesheet" type="text/css" href="/css/vendors/themify.css">
     <!-- Flag icon-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/flag-icon.css">
+    <link rel="stylesheet" type="text/css" href="/css/vendors/flag-icon.css">
     <!-- Feather icon-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/feather-icon.css">
+    <link rel="stylesheet" type="text/css" href="/css/vendors/feather-icon.css">
     <!-- Plugins css start-->
     <!-- Plugins css Ends-->
     <!-- Bootstrap css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="/css/vendors/bootstrap.css">
     <!-- App css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
-    <link id="color" rel="stylesheet" href="../assets/css/color-1.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link id="color" rel="stylesheet" href="/css/color-1.css" media="screen">
     <!-- Responsive css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="/css/responsive.css">
 </head>
 <body>
     <!-- login page start-->
     <div class="container-fluid">
         <div class="row">
-            <div class="col-xl-7"><img class="bg-img-cover bg-center" src="../assets/images/login/2.jpg" alt="looginpage"></div>
+            <div class="col-xl-7"><img class="bg-img-cover bg-center" src="/images/login/2.jpg" alt="looginpage"></div>
             <div class="col-xl-5 p-0">
                 <div class="login-card login-dark">
                     <div>
-                        <div><a class="logo text-start" href="index.html"><img class="img-fluid for-dark" src="../assets/images/logo/logo.png" alt="looginpage"><img class="img-fluid for-light" src="../assets/images/logo/logo_dark.png" alt="looginpage"></a></div>
+                        <div><a class="logo text-start" href="index.html"><img class="img-fluid for-dark" src="/images/logo/logo.png" alt="looginpage"><img class="img-fluid for-light" src="/images/logo/logo_dark.png" alt="looginpage"></a></div>
                         <div class="login-main">
                             <form method="post" class="theme-form">
                                 <h4>Sign in to account</h4>
@@ -88,20 +88,20 @@
             </div>
         </div>
         <!-- latest jquery-->
-        <script src="../assets/js/jquery.min.js"></script>
+        <script src="/js/jquery.min.js"></script>
         <!-- Bootstrap js-->
-        <script src="../assets/js/bootstrap/bootstrap.bundle.min.js"></script>
+        <script src="/js/bootstrap/bootstrap.bundle.min.js"></script>
         <!-- feather icon js-->
-        <script src="../assets/js/icons/feather-icon/feather.min.js"></script>
-        <script src="../assets/js/icons/feather-icon/feather-icon.js"></script>
+        <script src="/js/icons/feather-icon/feather.min.js"></script>
+        <script src="/js/icons/feather-icon/feather-icon.js"></script>
         <!-- scrollbar js-->
         <!-- Sidebar jquery-->
-        <script src="../assets/js/config.js"></script>
+        <script src="/js/config.js"></script>
         <!-- Plugins JS start-->
         <!-- calendar js-->
         <!-- Plugins JS Ends-->
         <!-- Theme js-->
-        <script src="../assets/js/script.js"></script>
+        <script src="/js/script.js"></script>
     </div>
 </body>
 </html>
